More efficient way of generating switch statements for tests

--- a/Either/Either.Test/Either.Test.csproj
+++ b/Either/Either.Test/Either.Test.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Either\Either.csproj" />
     <ProjectReference Include="..\Either.CodeFixes\Either.CodeFixes.csproj" />
     <ProjectReference Include="..\Either.Analyzers\Either.Analyzers.csproj" />
   </ItemGroup>
