--- a/Either/Either.CodeFixes/Either.CodeFixes.csproj
+++ b/Either/Either.CodeFixes/Either.CodeFixes.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <RootNamespace>Either</RootNamespace>
+    <LangVersion>12</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
