--- a/Either/Either.Package/Either.Package.csproj
+++ b/Either/Either.Package/Either.Package.csproj
@@ -9,18 +9,17 @@
 
   <PropertyGroup>
     <PackageId>Either.Analyzers</PackageId>
-    <PackageVersion>0.0.1</PackageVersion>
+    <PackageVersion>0.0.2</PackageVersion>
 	<Authors>Tornike Kharaishvili</Authors>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Copyright © Tornike Kharaishvili</Copyright>
-	<Description>Analyzers and code fixes that enforce exhaustive usage of Either&lt;T1,T2...&gt; types with switch statements/expressions and more</Description>
+	<Description>Analyzers and code fixes that enforce exhaustive usage of Either&lt;T1, T2...&gt; types with switch statements/expressions and more</Description>
+	<PackageProjectUrl>https://github.com/kharai-tor/Either</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/kharai-tor/Either</RepositoryUrl>
 	  
     <!--<PackageLicenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</PackageLicenseUrl>
-    <PackageProjectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</PackageProjectUrl>
     <PackageIconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</PackageIconUrl>
-    <RepositoryUrl>http://REPOSITORY_URL_HERE_OR_DELETE_THIS_LINE</RepositoryUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    
     <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>-->
     <PackageTags>Either analyzers, code fixes;Discriminated unions;Union types</PackageTags>
 	<PackageReadmeFile>readme.md</PackageReadmeFile>
