--- a/Either/Either.Test/Either.Test.csproj
+++ b/Either/Either.Test/Either.Test.csproj
@@ -26,6 +26,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Either.CodeFixes\Either.CodeFixes.csproj" />
 		<ProjectReference Include="..\Either.Analyzers\Either.Analyzers.csproj" />
+		<ProjectReference Include="..\Either\Either.csproj" />
 	</ItemGroup>
 
 </Project>
