Root namespaces specified

--- a/Either/Either.CodeFixes/Either.CodeFixes.csproj
+++ b/Either/Either.CodeFixes/Either.CodeFixes.csproj
@@ -5,6 +5,7 @@
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Either</RootNamespace>
 		<LangVersion>12</LangVersion>
+		<RootNamespace>RhymesOfUncertainty</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
