--- a/Either/Either.Test/Either.Test.csproj
+++ b/Either/Either.Test/Either.Test.csproj
@@ -5,6 +5,7 @@
 
 		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 		<GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+		<RootNamespace>RhymesOfUncertainty.Test</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
