--- a/Either/Either.Analyzers/Either.Analyzers.csproj
+++ b/Either/Either.Analyzers/Either.Analyzers.csproj
@@ -9,6 +9,7 @@
 		<LangVersion>12</LangVersion>
 		<Nullable>enable</Nullable>
 		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+		<RootNamespace>RhymesOfUncertainty</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
