--- a/Either/Either/Either.csproj
+++ b/Either/Either/Either.csproj
@@ -2,6 +2,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>12</LangVersion>
+		<RootNamespace>RhymesOfUncertainty</RootNamespace>
 	</PropertyGroup>
 	<PropertyGroup>
 		<PackageId>Either.Main</PackageId>
